--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<!-- Define el framework de destino del proyecto -->
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
 	<ItemGroup>
+		<!-- Define una referencia al conjunto de bibliotecas principales de ASP.NET Core -->
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
-	</ItemGroup>
 
+	<ItemGroup>
+		<!-- Agrega una referencia al paquete NuGet para la funcionalidad de Entity Framework Core para Identity en ASP.NET Core -->
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
+	</ItemGroup>
 </Project>
